trabajando con la compilacion en consola

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -65,7 +65,7 @@ javadoc.version=false
 javadoc.windowtitle=
 jlink.launcher=false
 jlink.launcher.name=SubtitleFilesConverter
-main.class=console.subtitleConsole
+main.class=subtitles.subtitleConsole
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
